Fixed image size and overlaping footer

--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,10 @@ button {
 button:hover {
   background-color: rgb(0, 98, 98);
 }
+img {
+  width: 10rem;
+  height: auto;
+}
 /* Footer styles */
 footer {
   height: 10vh;
